# projet-m1i3d-beziers-gregory

./: .gitignore  CMakeLists.txt  README.md  main.cpp
common/: BezierCurve.cpp  BezierCurve.hpp  BezierRectSurface.cpp  BezierRectSurface.hpp  BezierRenderer.cpp  BezierRenderer.hpp  GregoryRectSurface.cpp  GregoryRectSurface.hpp  RenderableBezier.hpp  utils.hpp
curves/: CMakeLists.txt  Viewer.cpp  Viewer.hpp  main.cpp
easycppogl/: CMakeLists.txt  README.md
easycppogl/Examples/: CMakeLists.txt  tp_geometry_shader_billboard.cpp
easycppogl/easycppogl_src/: CMakeLists.txt  camera.cpp  camera.h  ebo.h  fbo.cpp  fbo.h  gl_eigen.cpp  gl_eigen.h  gl_viewer.cpp  gl_viewer.h  imgui_demo.cpp  imgui_viewer.cpp  imgui_viewer.h  mesh.cpp  mesh.h  mframe.h  portable_file_dialogs.h  shader_program.cpp  shader_program.h  stb_image.h  texture2d.cpp  texture2d.h  texture3d.cpp  texture3d.h  transform_feedback.cpp  transform_feedback.h  vao.cpp  vao.h  vbo.h
gregory/: Viewer.cpp  Viewer.hpp  main.cpp
rect_surface/: CMakeLists.txt  Viewer.cpp  Viewer.hpp  main.cpp
resources/shaders/: basicMV_vert.glsl  basicTransformable_vert.glsl  basic_frag.glsl  basic_fragUV.glsl  basic_vert.glsl  cubicBezier_tessCont.glsl  curveBezier_tessCont.glsl  curveBezier_tessEval.glsl  phong_frag.glsl  surfaceBezier_tessCont.glsl  surfaceBezier_tessEval.glsl  test_frag.glsl  test_tessCont.glsl  test_tessEval.glsl  test_vert.glsl
resources/shaders/bezier_curves/: tessCont.glsl  tessEval.glsl
resources/shaders/bezier_surface_rect/: tessCont.glsl  tessEval.glsl
resources/shaders/gregory_surface_rect/: tessCont.glsl  tessEval.glsl
